src/test/ui/rfc-1260-main-reexport/generic-fn.stderr
error[E0131]: `main` function is not allowed to have type parameters
  --> $DIR/generic-fn.rs:15:15
   |
LL |     pub fn bar<T>() { //~ ERROR
   |               ^^^ `main` cannot have type parameters

error: aborting due to previous error

For more information about this error, try `rustc --explain E0131`.
